--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,25 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-<<<<<<< HEAD
     package="info.diegoramos.smartjobs2"
-=======
-    package="info.diegoramos.smartjobs"
->>>>>>> ce5e6909afed8fac9b7e1284789a2206337555bd
-    android:versionCode="2"
-    android:versionName="1.0.1" >
+    android:versionCode="3"
+    android:versionName="1.0.2" >
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <uses-sdk 
+    <uses-sdk
         android:minSdkVersion="8"
+        android:targetSdkVersion="17"
          />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/toolbox"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         
         <activity
             android:name="info.diegoramos.smartjobs.view.MainActivity"
@@ -38,7 +35,17 @@
             </intent-filter>
         </activity>
         
-		<!-- TypeOfService [ INI ] -->
+        <activity
+            android:name="info.diegoramos.smartjobs.view.Info"
+            android:label="@string/app_name" >
+        </activity>           
+
+        <activity
+            android:name="info.diegoramos.smartjobs.view.IndeedSearch"
+            android:label="@string/app_name" >
+        </activity>        
+        
+        <!-- TypeOfService [ INI ] -->
         <activity
             android:name="info.diegoramos.smartjobs.view.TypeOfServiceList"
             android:label="@string/type_of_service_title" >
@@ -96,5 +103,5 @@
         
         		
     </application>
-
+    
 </manifest>
